--- a/package.json
+++ b/package.json
@@ -31,5 +31,8 @@
     "url-loader": "^4.0.0",
     "webpack": "^4.42.0",
     "webpack-cli": "^3.3.11"
+  },
+  "dependencies": {
+    "date-fns": "^2.11.0"
   }
 }
